@@ -414,6 +414,30 @@ blah blah blah
 """],
     ]
 
+totest['rubric'] = [
+        [""".. rubric:: some rubric
+
+- followed by
+- a list
+""",
+        r""".\" Man page generated from reStructuredText.
+.
+.TH ""  "" "" ""
+.SH NAME
+ \- 
+"""+indend_macros+
+r"""some rubric
+.INDENT 0.0
+.IP \(bu 2
+followed by
+.IP \(bu 2
+a list
+.UNINDENT
+.\" Generated by docutils manpage writer.
+.
+"""],
+    ]
+
 
 if __name__ == '__main__':
     import unittest
